# dune-coq-extraction-template

./: _CoqProject  dune-project
lib/: dune  qux.v
theories/: Bar.v  Baz.v  dune
